# tinynes

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  LICENSE-OLC3  README.md  main.cpp
assets/: nes_structure.drawio
demo/: CMakeLists.txt  README  demo_cpu.cpp  demo_ppu.cpp  demo_sound.cpp  demo_sound2.cpp  demo_tinynes.cpp  demo_vscreen.cpp
include/tinynes/: apu.h  bus.h  cartridge.h  cpu.h  gui.h  mapper_base.h  palette_color.h  ppu.h  utils.h  vscreen.h  vsound.h
include/tinynes/mappers/: mapper000.h
src/: apu.cpp  bus.cpp  cartridge.cpp  cpu.cpp  ppu.cpp  vsound.cpp
src/mappers/: mapper000.cpp
test/: CMakeLists.txt
